# NQueeniesSolvingSample

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  Common.hpp  Main.cpp  StopWatch.cpp  StopWatch.hpp  Types.hpp
Source/Algorithms/: Algorithms.cpp  Algorithms.hpp  State.hpp
Source/Genetic/: GeneticSearch.cpp  GeneticSearch.hpp  Population.cpp  Population.hpp
Source/Objects/: Board.cpp  Board.hpp
